<resources>
    <string name="app_name">Quiz App 2</string>
    <string name="your_score_0">YOUR SCORE : 0</string>
    <string name="wheat">Wheat</string>
    <string name="question_1">QUESTION 1</string>
    <string name="who_is_the_first_president_of_india">WHO IS THE FIRST PRESIDENT OF INDIA ?</string>
    <string name="rice">Rice</string>
    <string name="rajendra_prasad">Rajendra Prasad</string>
    <string name="zakir_husain">Zakir Husain</string>
    <string name="question_3">QUESTION 3</string>
    <string name="chile">Chile</string>
    <string name="question_6">QUESTION 6</string>
    <string name="enter_the_name_of_organisation">Enter the name of organisation</string>
    <string name="submit">SUBMIT</string>
    <string name="todo">TODO</string>
    <string name="france">France</string>
    <string name="ram_nath_kovind">Ram Nath Kovind</string>
    <string name="cuba">Cuba</string>
    <string name="fructose">Fructose</string>
    <string name="which_country_below_is_not_one_of_the_members_of_the_un_security_council_jan_2003">Which country below is not one of the members of the UN security council (Jan 2003)?</string>
    <string name="question_4">QUESTION 4</string>
    <string name="russia">Russia</string>
    <string name="india">India</string>
    <string name="vatican_city">Vatican City</string>
    <string name="the_world_smallest_country_is">The world smallest country is</string>
    <string name="maize">Maize</string>
    <string name="sugercane">Sugercane</string>
    <string name="which_crop_is_sown_on_the_largest_area_in_india">Which crop is sown on the largest area in India?</string>
    <string name="question_2">QUESTION 2</string>
    <string name="pratibha_patil">Pratibha Patil</string>
    <string name="germany">Germany</string>
    <string name="china">China</string>
    <string name="question_5">QUESTION 5</string>
    <string name="which_are_carbohydrates">Which are Carbohydrates?</string>
    <string name="insulin">Insulin</string>
    <string name="glucose">Glucose</string>
    <string name="thiamine">Thiamine</string>
</resources>
